Fix the gap spacing issue

--- a/css/main.css
+++ b/css/main.css
@@ -24,8 +24,8 @@ body {
   margin: 0;
   padding: 1rem;
   display: grid;
-  grid-template-columns: repeat(2, 50%);
-  grid-template-rows: repeat(2, 50%);
+  grid-template-columns: repeat(2, 1fr);
+  grid-template-rows: repeat(2, 1fr);
   gap: 1rem;
   grid-template-areas:
     "pano  pano"
